--- a/mtrf.tex
+++ b/mtrf.tex
@@ -196,8 +196,8 @@ where the predicate $cut$ is a description of an event $e$. This representation,
 \begin{equation} \label{eg:neodavidsonian}
 \begin{aligned}
     \exists e\ cut(e)
-    & \land \text{AGENT}(e, \text{cook}) \land \text{PATIENT}(e, \text{cake}) \\
-    & \land \text{INSTRUMENT}(e, \text{knife}) \land \text{LOCATION}(e, \text{kitchen}) \\
+    & \land \texttt{AGENT}(e, \text{cook}) \land \texttt{PATIENT}(e, \text{cake}) \\
+    & \land \texttt{INSTRUMENT}(e, \text{knife}) \land \texttt{LOCATION}(e, \text{kitchen}) \\
 \end{aligned}
 \end{equation}
 where each thematic role is acting as a logical predicate of the event $e$ and the corresponding participant. This representation, named as \textit{neo-Davidsonian event representation}, is highly compatible with semantic role models. 
@@ -209,9 +209,9 @@ where each thematic role is acting as a logical predicate of the event $e$ and t
 
 
 \subsection{Semantic Role Model} \label{sec:semanticrole}
-Thematic role is the oldest semantic role model which is formalised by \citet{gruber1965studies} and \citet{fillmore1968case} in modern time. The inventory of roles usually contains AGENT, PATIENT, INSTRUMENT and LOCATION \citep{aarts2013english}. Table \ref{tab:thematic} shows informal definitions of them \citep{jurafsky2014speech}. One disadvantage of thematic roles is that the range of role inventory is difficult to decide. Even worse, the formal definitions of thematic roles are controversial. 
+Thematic role is the oldest semantic role model which is formalised by \citet{gruber1965studies} and \citet{fillmore1968case} in modern time. The inventory of roles usually contains \texttt{AGENT}, PATIENT, INSTRUMENT and LOCATION \citep{aarts2013english}. Table \ref{tab:thematic} shows informal definitions of them \citep{jurafsky2014speech}. One disadvantage of thematic roles is that the range of role inventory is difficult to decide. Even worse, the formal definitions of thematic roles are controversial. 
 
-The Proposition Bank (PropBank) is an annotated corpus of semantic roles based on Penn TreeBank \citep{palmer2005proposition}. It also provides an effective semantic role model which we will adopt. Table \ref{tab:propbank} shows definitions of semantic roles in PropBank style used in this paper. The definitions are based on the PropBank Annotation Guidelines \citep{bonial2010propbank}. Arguments required for the valency of a predicate are listed with numbers. Modifiers, which are relatively stable across predicates, are marked with ArgMs. While PropBank focuses on verbal predicates, NomBank adds annotations to nominal predicates \citep{meyers2004nombank}. 
+The Proposition Bank (PropBank) is an annotated corpus of semantic roles based on Penn TreeBank \citep{palmer2005proposition}. It also provides an effective semantic role model which we will adopt. Table \ref{tab:propbank} shows examples of semantic roles in PropBank style. The definitions are based on the PropBank Annotation Guidelines \citep{bonial2010propbank}. Arguments required for the valency of a predicate are listed with numbers. Modifiers, which are relatively stable across predicates, are marked with ArgMs. While PropBank focuses on verbal predicates, NomBank adds annotations to nominal predicates \citep{meyers2004nombank}. 
 
 
 \begin{table}[t]
@@ -300,8 +300,8 @@ We intend to learn meaningful representation of event structure in semantic spac
 \begin{equation*} \label{eg:symbolic-thematic}
 \begin{aligned}
     \exists e\ \text{PRD}(e, \text{cut})
-    & \land \text{AGENT}(e, \text{cook}) \land \text{PATIENT}(e, \text{cake}) \\
-    & \land \text{INSTRUMENT}(e, \text{knife}) \land \text{LOCATION}(e, \text{kitchen}) \\
+    & \land \texttt{AGENT}(e, \text{cook}) \land \texttt{PATIENT}(e, \text{cake}) \\
+    & \land \texttt{INSTRUMENT}(e, \text{knife}) \land \texttt{LOCATION}(e, \text{kitchen}) \\
 \end{aligned}
 \end{equation*}
 
@@ -309,12 +309,11 @@ If we specify the sense of the predicate $cut$, thematic roles can be replaced w
 \begin{equation*} \label{eg:symbolic-semantic}
 \begin{aligned}
     \exists e\ \text{PRD}(e, \text{cut.01})
-    & \land \text{ARG0}(e, \text{cook}) \land \text{ARG1}(e, \text{cake}) \\
-    & \land \text{ARGM-MNR}(e, \text{knife}) \land \text{ARGM-LOC}(e, \text{kitchen}) \\
+    & \land \texttt{ARG0}(e, \text{cook}) \land \texttt{ARG1}(e, \text{cake}) \\
+    & \land \texttt{ARGM-MNR}(e, \text{knife}) \land \texttt{ARGM-LOC}(e, \text{kitchen}) \\
 \end{aligned}
 \end{equation*}
-This is a representation of the event in first order logic. We define a semantic role model for this paper. We join PropBank semantic roles and the special role PRD together as semantic roles. So the semantic role labels we use in this paper are defined in Table \ref{tab:semantic}. As we mention above, semantic arguments can be represented by the syntactic head words, so the notion of \textit{argument} in PropBank role labels is replaced by \textit{event participant}. 
-
+This is a representation of the event in first order logic. We define a semantic role model for this paper. We join PropBank semantic roles and the special role PRD together as semantic roles. So the semantic role labels we use in this paper are defined in Table \ref{tab:semantic}. As we mention in Section \ref{sec:intro}, semantic arguments can be represented by the syntactic head words, so the notion of \textit{argument} in PropBank role labels is replaced by \textit{event participant}. 
 % * <asayeed@mbl.ca> 2017-11-13T22:45:29.318Z:
 % 
 % Again do we need to commit to this kind of representation here?  I'm not saying categorically not to do it, merely that it needs to be justified.
@@ -407,7 +406,7 @@ which is a representation of a participant in an event. "$\circ$" is Hadamard pr
 
 
 \newpage
-\section{Multitask Role Filler Model} \label{sec:mtrf}
+\section{Multi-task Role Filler Model} \label{sec:mtrf}
 
 
 \begin{figure}[t]
@@ -485,12 +484,12 @@ Since there is a vector $\mathbf{b}_y$ representing target role $b_y$, the embed
 \begin{figure}[t]
 \centering
 \includegraphics[width=0.7\textwidth]{MTRF.png}
-\caption{\label{fig:MTNNRF} Model architecture of multitask version of non-incremental role filler.}
+\caption{\label{fig:MTNNRF} Model architecture of multi-task version of non-incremental role filler.}
 \end{figure}
 
 
-\subsection{Multitask Learning} \label{sec:mtl}
-In addition to role-filler prediction, we also want to perform semantic role prediction. This task can be considered as a regularisation of the objective function of the role-filler prediction task. Using this idea, we design a model named \textbf{multitask role filler (MTRF)} described in Figure \ref{fig:MTNNRF} which differs with \textbf{NNRF} only in the last layer. 
+\subsection{Multi-task Learning} \label{sec:mtl}
+In addition to role-filler prediction, we also want to perform semantic role prediction. This task can be considered as a regularisation of the objective function of the role-filler prediction task. We add one more classifier for this task to NNRF in the last layer. The model named \textbf{multi-task role filler (MTRF)} is described in Figure \ref{fig:MTNNRF} where the extra classifier is in the red border rectangle. 
 
 Since we want to obtain the probability distribution of target word or target role, in the last layer a softmax regression classifier is used for each task. The output vectors of these classifiers are computed as:
 \begin{equation} \label{eq:output-mt}
@@ -566,7 +565,7 @@ The models are evaluated in two experiments. In the first experiment, for each e
 \begin{equation}
     (table, draw, eye), (table, draw, eye), (eye, attract, table)
 \end{equation}
-This subset is named as \textbf{foil event similarity (FSM)} data set. We extract the event embedding vector defined in equation  \eqref{eq:sum-comp} from two models. We then compute two similarities: similarity of the first event and the second event; similarity of the first event and the foil event. Generally the larger of the difference between these two similarities we obtain, the better model we have. The similarity score of two events is computed as cosine similarity of two event embedding vectors. For each model, the means of these two similarities are computed across FSM. The results are in Table \ref{tab:foil-mtrf}. MTRF has a lower mean similarity between based event and foil event. Moreover, it has a higher difference between two similarities.
+This subset is named as \textbf{foil event similarity (FSM)} data set. We extract the event embedding vector defined in equation  \eqref{eq:sum-comp} from two models. We then compute two similarities: similarity of the first event and the second event; similarity of the first event and the foil event. Generally the larger of the difference between these two similarities we obtain, the better model we have. The similarity score of two events is computed as cosine similarity of two event embedding vectors. For each model, the means of these two similarities are computed across FSM. The results are in Table \ref{tab:foil-mtrf}. MTRF has a lower mean similarity between original event and foil event. Moreover, it has a higher difference between two similarities. 
 
 The second experiment is event similarity task \citep{grefenstette2015concrete}. We extract the event embedding vector for the first and second event. The similarity score of two events is computed as cosine similarity as well. Then we compute Spearman's rho correlation coefficient between model scores and human judgement scores. The result in every epoch is reported as a line chart in Figure \ref{fig:GS-NNRF-MTRF}. The correlation score keeps stable after $20$ epochs. MTRF has a higher score than NNRF at almost every epoch. Thus MTRF is better correlated with human performance. This indicates that with the additional semantic role prediction task, MTRF learns a better embedding of events. 
 
@@ -761,6 +760,7 @@ We choose the first 3472 segments as training data, the next 14 segments as test
   \item  generate the vocabulary from the top 50000 most frequent words. 
 \end{enumerate}
 
+Using the vocabulary this vocabulary,  
 
 \subsection{Model Implementation} \label{sec:implementation}
 We implement the models with Keras 2.0.5 \citep{chollet2015keras}. And then we deploy each model on high performance computer with one 48 cores Intel Xeon E7 CPU and one Nvidia Geforce Titan X GPU as neural network accelerator. 
