--- a/mtrf.tex
+++ b/mtrf.tex
@@ -748,19 +748,61 @@ linenos]{xml}
   </dependencies>
 </predicate>
 \end{minted}
-where event is arranged in XML format.  
+where event is arranged in XML format. Line $1$ contains the URL to the text containing this event. The predicate is tagged as $governor$ and the arguments are tagged as $dep$. The head word is in the value field of $dep$ and the heuristic used to extract it is in the attribute $algorithm$. 
 
-We choose the first 3472 segments as training data, the next 14 segments as testing data and the last 14 segments as validation data. The word vocabulary for event predicates and participants is constructed with following steps: 
+We choose the first 3472 segments as training corpus, the next 14 segments as test corpus and the last 14 segments as validation corpus. The word list for event predicates and participants is constructed with following steps: 
 \begin{enumerate}
-  \item  go through the training data, for each event, find out the entries denoting the event predicate and all event participants. 
-  \item  filter out every entry with FAILED tag in $algorithm$ attribute; only accept entry with POS tag starting with $n$, $v$, $j$, $r$; only accept entry with English characters and punctuation like $'$, $-$; 
-  \item  extract the lowercase form of the head word from each entry.
+  \item  go through the training corpus, for each event, find out the entries denoting the event predicate and all event participants. 
+  \item  filter out every entry that has \texttt{FAILED} in $algorithm$; only accept entry with POS tag starting with $n$, $v$, $j$, $r$; only accept entry with English characters and punctuation like $'$, $-$; 
+  \item  extract the lower case form of the head word from each entry.
   \item  lemmatized each word using WordNet lemmatizer in NLTK. 
   \item  compute the frequency of each unique lemma. 
-  \item  generate the vocabulary from the top 50000 most frequent words. 
+  \item  generate the vocabulary from the top $50000$ most frequent words. 
 \end{enumerate}
+Using this word list, each word $a_i$ is assigned with a identifier $i$ in the integer set of $[1, 50000]$. The identifier of out-of-vocabulary word \texttt{<OOV>} is $50001$. So the length of the word vocabulary $V$ is 50001. The role vocabulary is constructed upon the list of semantic role labels defined in Table \ref{tab:semantic} with an additional role label \texttt{OTHER} for those role labels in the corpus but not in our list. Since we have $8$ role labels in the role vocabulary $R$, each role $b_j$ has a identifier $j$ in the range of $[0, 7]$ where the identifier $7$ is for the \texttt{OTHER} role. 
 
-Using the vocabulary this vocabulary,  
+Using these identifiers, we go through all three corpora to construct training data, test data and validation data. Similar to vocabulary construction, we filter out all event with \texttt{FAILED} in $algorithm$. In each event, the maximum number of roles is $29$ which is the number of all possible roles in the corpora. For each role represented by its identifier, it is coupled with a word identifier for the corresponding head word. For any role without a head word, an identifier $0$ for empty word \texttt{<NULL>} is assigned. 
+
+
+\subsection{Model Training} \label{sec:training}
+For each event in the training data, we define the objective function for three tasks in Section \ref{sec:tasks}:
+\begin{itemize}
+  \item  \textbf{Participant prediction}: We choose the $l$-th event participant whose head word is not empty word. We use its head word as target word $a_l$ and its semantic role as target role $b_l$. Then we consider all other word-role pairs as event context $e$. The objective function is computed using output from Equation \eqref{eq:softmax-w} as  $O^{(pa)}(l) = p(a_l | e, b_l)$. 
+  \item  \textbf{Predicate prediction}: We choose the head word $a_{pr}$ of event predicate as target word and the role \texttt{PRD} as target role. Then we consider all other word-role pairs of event participants as event context $e$. The objective function is computed using output from Equation \eqref{eq:softmax-w} as  $O^{(pr)}(pr) = p(a_{pr} | e, \texttt{PRD})$. 
+  \item  \textbf{Semantic role prediction}: We choose the $l$-th event participant whose head word is not empty word. We use its semantic role as target role $b_l$ and its head word as target word $a_l$. Then we consider all other word-role pairs as event context $e$. The objective function is computed using output from Equation \eqref{eq:softmax-r} as  $O^{(sr)}(l) = p(b_l | e, a_l)$. 
+\end{itemize}
+Combining all three objective functions in a multi-task style, we define the likelihood function as:
+\begin{equation} \label{eq:likelihood}
+\begin{aligned}
+    \mathcal{L}(\theta, e)
+        &= O^{(pr)}(pr) \prod_{i \in L} O^{(pa)}(i) + \alpha \prod_{j \in L} O^{(sr)}(j) 
+\end{aligned}
+\end{equation}
+where $\theta$ representing all parameters in the model, $E$ is the set of all event participants in the event and $\alpha$ is the hyper-parameter for the weight of semantic role prediction task. The model is trained over all events in the training data to obtain parameters $\theta$ that maximize the likelihood function as:
+\begin{equation} \label{eq:mle}
+\begin{aligned}
+    \theta
+        &= \mathop{argmax} \limits_{\theta} \mathcal{L}(\theta, e),\ e \in D_{train}
+\end{aligned}
+\end{equation}
+
+To perform maximum likelihood estimation, we process a fixed number of events, a batch, each time and use AdaGrad algorithm \citep{duchi2011adaptive} as optimizer to update parameters. The batch size $bs$ and the learning rate $lr$ are hyper-parameters. When all events in training data are processed one time, the period is considered as an epoch. After each training epoch, the model is validated on the validation data. The validation loss is defined as: 
+\begin{equation} \label{eq:validation}
+\begin{aligned}
+    \mathcal{L}_{validate}
+        &= \frac{1}{|D_{validate}|} \sum_{e \in D_{validate}} \mathcal{L}(\theta, e) 
+\end{aligned}
+\end{equation}
+When the validation loss stop decreasing for $dp$ epochs, we decrease the learning rate by multiplying $lr$ with a factor of $dr$. If the validation loss stop decreasing for $es$ epochs, we consider the model has converged. We perform early stopping and start model testing. The model is tested on the test data. The overall perplexity is computed on test data as:
+\begin{equation} \label{eq:perplexity}
+\begin{aligned}
+    \mathcal{L}_{test}
+        &= \frac{1}{|D_{test}|} \sum_{e \in D_{test}} \mathcal{L}(\theta, e) \\
+    \mathcal{PP}
+        &= \frac{1}{\mathcal{L}_{test}}
+\end{aligned}
+\end{equation}
+
 
 \subsection{Model Implementation} \label{sec:implementation}
 We implement the models with Keras 2.0.5 \citep{chollet2015keras}. And then we deploy each model on high performance computer with one 48 cores Intel Xeon E7 CPU and one Nvidia Geforce Titan X GPU as neural network accelerator. 
